changed all instances of multi-db/MULTI_DB to mutlti-db-driver/MULTI_DB_DRIVER

--- a/.gitignore
+++ b/.gitignore
@@ -170,8 +170,9 @@ temp/
 
 .npmrc
 
-multi-db-mysql-dump-password.cnf
-.multi-db-config.json
+multi-db-driver-mysql-dump-password.cnf
+.multi-db-driver-pg-dump-config
+.multi-db-driver-config.json
 .npm-cache
 test/configs
 test/db
